--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -62,7 +62,7 @@ code {
   box-sizing: border-box;
   background: conic-gradient(from 90deg at 50% 50%, rgba(255, 255, 255, 0.0001) 0deg, #454545 359.96deg, rgba(255, 255, 255, 0.0001) 360deg);
   border-radius: 56px;
-  animation: 1s rotate infinite linear;
+  animation: 1s rotate-onlyoffice-spinner infinite linear;
 }
 
 .spinner::before {
@@ -85,7 +85,7 @@ code {
   border-radius: 8px;
 }
 
-@keyframes rotate {
+@keyframes rotate-onlyoffice-spinner {
   0% {
     transform: rotate(0deg);
   }
