--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -6,15 +6,6 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -71,6 +62,10 @@ code {
   width: 40px;
   background: #fff;
   border-radius: 48px;
+}
+
+.spinner:is(.dark *)::before {
+  background: #1e2029;
 }
 
 .spinner::after {
